--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/native-keyboard": "^5.32.0",
     "@ionic/angular": "^5.5.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
+    "cordova-plugin-native-keyboard": "^2.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
